crux-llvm/test-data/golden/golden-loop-merging/issue_478_unsafe.good
[Crux] Counter example for test-data/golden/golden-loop-merging/issue_478_unsafe.c:35:0: error: in main
crucible_assert
[Crux] Found counterexample for verification goal
test-data/golden/golden-loop-merging/issue_478_unsafe.c:35:0: error: in main
crucible_assert

[Crux] Overall status: Invalid.
